--- a/Memoria/capitulos/09_Conclusion.tex
+++ b/Memoria/capitulos/09_Conclusion.tex
@@ -1,2 +1,33 @@
 \chapter{Conclusiones}
 \label{cap:conclusiones}
+Tras meses de trabajo, se ha conseguido realizar la aplicación multiplataforma que se pretendía al comienzo del proyecto. 
+Se ha logrado desarrollar un sistema para el aprendizaje musical de forma interactiva y basado en métodos de gamificación. En concreto, se han conseguido
+los siguientes objetivos:
+\begin{itemize}
+    \item Se ha construido un sistema seguro y robusto, que permite a los usuarios registrarse y acceder a la aplicación con seguridad.
+    \item Se ha desarrollado un sistema de gestión de usuarios, que permite a los usuarios guardar su progreso y acceder a él desde cualquier dispositivo.
+    \item Se ha implementado un sistema de administración para el profesor y el administrador, que permite gestionar los usuarios, las lecciones, las preguntas y los logros de forma fácil y cómoda.
+    \item Se ha desarrollado un sistema de lecciones, que permite a los usuarios aprender los conceptos básicos de la música de forma interactiva.
+    \item Se ha implementado un sistema de preguntas, que permite a los usuarios poner a prueba sus conocimientos de forma interactiva. En concreto, uno de los mayores retos del proyecto ha sido la implementación de la funcionalidad de preguntas de tipo \textit{micrófono} y tras mucho
+    esfuerzo se ha logrado desarrollar con un resultado satisfactorio.
+    \item Se ha desarrollado un sistema de logros, que permite a los usuarios obtener recompensas por su progreso y sus logros.
+\end{itemize}
+
+El desarrollo de este proyecto ha sido una experiencia muy enriquecedora, ya que ha permitido aprender y poner en práctica muchos de los conocimientos adquiridos durante los cuatro años de grado. Además, me ha permitido afianzar mis habilidades de programación y aprender nuevas tecnologías y herramientas que no había utilizado anteriormente o de forma muy superficial.
+
+\section{Trabajo futuro}
+\label{sec:trabajo_futuro}
+Aunque el proyecto ha sido completado con éxito, existen algunas funcionalidades que no han podido ser implementadas por falta de tiempo. En esta sección se detallan algunas de las funcionalidades que se podrían implementar en un futuro y que no descarto implementarlas tras la finalización del proyecto.
+\begin{itemize}
+    \item \textbf{Sistema de tienda}: Se podría implementar un sistema de tienda, que permita a los usuarios canjear puntos por premios dentro de la aplicación (insignias, fondos, etc.)
+    \item \textbf{Sistema de amigos}: Se podría implementar un sistema de amigos, que permita a los usuarios añadir a otros usuarios como amigos y ver sus perfiles.
+    \item \textbf{Sistema de chat}: Se podría implementar un sistema de chat, que permita a los usuarios comunicarse entre ellos.
+    \item \textbf{Sistema de comentarios}: Se podría implementar un sistema de comentarios, que permita a los usuarios comentar las lecciones y las preguntas o incluso sugerir nuevas preguntas para una lección.
+    \item \textbf{Sistema de estadísticas}: Se podría implementar un sistema de estadísticas, que permita a los usuarios ver sus estadísticas de progreso en el perfil de forma más detallada.
+    \item \textbf{Más tipos de preguntas}: Se podrían implementar más tipos de preguntas, como por ejemplo preguntas de tipo \textit{arrastrar y soltar} o preguntas de tipo \textit{piano} (tocar en un pequeño piano de la pantalla la(s) nota(s) que se pidan).
+\end{itemize}
+
+\section{Valoración personal}
+\label{sec:valoracion_personal}
+Mi experiencia con este proyecto ha sido muy positiva. Además de todos los conocimientos adquiridos, ha sido muy gratificante ver cómo poco a poco la aplicación iba tomando forma y se iba convirtiendo en lo que había imaginado al comienzo del proyecto. Aunque ha sido un proyecto muy ambicioso, he conseguido completarlo con éxito y estoy muy satisfecho con el resultado final.
+En cuanto al seguimiento del proyecto, también he logrado completar el proyecto en el tiempo estimado, aunque he tenido que dedicar más tiempo del esperado a la implementación de algunas funcionalidades, como por ejemplo la funcionalidad de preguntas de tipo \textit{micrófono} o a las pruebas de integración. 
